--- a/package.json
+++ b/package.json
@@ -4,13 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "vite-dev": "vite", // 既存のVite開発サーバー起動コマンド
-    "dev": "npm-run-all -p vite-dev sync", // ViteとBrowserSyncを並行して起動
-    // ★ BrowserSyncのプロキシ設定
-    // Viteのデフォルトポートである5173をプロキシする
-    // --files で監視対象を指定することでHMRが効かないファイル変更に対応
-    "sync": "browser-sync start --proxy http://localhost:5173 --files 'src/**/*.{js,jsx,ts,tsx,html,css}'", 
-
+    "vite-dev": "vite",
+    "dev": "npm-run-all -p vite-dev sync",
+    "sync": "browser-sync start --proxy http://localhost:5173 --files 'src/**/*.{js,jsx,ts,tsx,html,css}'",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -26,11 +22,13 @@
     "@vitejs/plugin-react": "^5.0.3",
     "babel-plugin-react-compiler": "^19.1.0-rc.3",
     "browser-sync": "^3.0.4",
+    "cssnano": "^7.1.1",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.5.6",
     "sass": "^1.93.2",
     "sass-loader": "^16.0.5",
     "typescript": "~5.8.3",
