--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d build -r -m \"Updates --skip-ci\""
+    "deploy": "npm run build && gh-pages -d build -r --message \"Deploy Updates [skip ci]\""
   },
   "dependencies": {
     "eslint-plugin-neverthrow": "^1.1.4",
