--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d build --remote pokemon-app-arranged --message \"Deploy Updates [skip ci]\""
+    "deploy": "npm run build && gh-pages -d build --remote pokemon-app-arranged --message \"Deploy Updates [use gh-pages, skip ci]\""
   },
   "dependencies": {
     "eslint-plugin-neverthrow": "^1.1.4",
