--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
     "babel-plugin-react-compiler": "^19.1.0-rc.3",
+    "baseline-browser-mapping": "^2.9.5",
     "browser-sync": "^3.0.4",
     "cssnano": "^7.1.1",
     "eslint": "^9.36.0",
