--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "deploy": "npm run build && gh-pages -d build --remote pokemon-app-arranged --message \"Deploy Updates [use gh-pages, skip ci]\""
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.7",
     "eslint-plugin-neverthrow": "^1.1.4",
     "neverthrow": "^8.2.0",
     "react": "^19.1.1",
