--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "neverthrow": "^8.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "ts-results": "^3.3.0"
   },
   "devDependencies": {
