--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "files": [],
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ESNext",
+    "lib": ["ES2024", "DOM"],
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
+    "allowJs": true,
     "skipLibCheck": true, // 型定義ファイルのチェックをスキップ（高速化）
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true // 「ファイルを作らない」という設定
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "build", "**/*.spec.ts", "**/*.test.ts", "coverage"],
