--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.7",
+    "@tanstack/react-query": "^5.90.21",
+    "@tanstack/react-query-devtools": "^5.91.3",
     "eslint-plugin-neverthrow": "^1.1.4",
     "neverthrow": "^8.2.0",
     "react": "^19.1.1",
